fix(disabled-visual-picker): enhance appearance of disabled visual picker (#3393)
* fix(disabled-visual-picker): revise UI on disabled visual picker to be more apparent, and better match conventions

* fix(disabled-visual-picker): snapshots

* fix(disabled-visual-picker): setting transparent fill on disabled variant

* fix(disabled-visual-picker): remove :hover border adjustment on disabled hovers

* fix(disabled-visual-picker): update container and not icon for hiding

--- a/packages/design-system/ui/components/visual-picker/coverable-content/_index.scss
+++ b/packages/design-system/ui/components/visual-picker/coverable-content/_index.scss
@@ -123,23 +123,19 @@
       cursor: not-allowed;
       user-select: none;
 
-      ~ label .slds-icon {
-        opacity: 0.5;
-      }
-
       ~ label .slds-visual-picker__body,
       ~ label .slds-visual-picker__text {
         color: $color-text-input-disabled;
       }
 
       ~ label .slds-visual-picker__figure {
-        border: $border-width-thin solid $color-border;
+        border-color: $color-border-input-disabled;
+        background-color: $color-background-input-disabled;
         box-shadow: none;
 
         &:hover {
           cursor: not-allowed;
           user-select: none;
-          border: $border-width-thin solid $color-border;
           box-shadow: none;
         }
       }
