fix(progress-bar): Add documentation for vertical variant (#3397)

--- a/packages/design-system/ui/components/_index.scss
+++ b/packages/design-system/ui/components/_index.scss
@@ -182,6 +182,7 @@
 
   // Progress Indicator
   'progress-bar/base/index',
+  'progress-bar/vertical/index',
   'progress-indicator/base/index',
   'progress-indicator/vertical/index',
   'progress-ring/base/index',
