fix(file-selector): padding changes for densification (#3404)

--- a/packages/design-system/ui/components/file-selector/base/_index.scss
+++ b/packages/design-system/ui/components/file-selector/base/_index.scss
@@ -137,13 +137,7 @@
 
   .slds-file-selector__dropzone {
     @include absolute-center;
-
-    // Maintains a 1:1 ratio based on the width
-    &:after {
-      content: '';
-      padding-top: 100%;
-      display: table; // FF issue
-    }
+    padding: $spacing-medium;
   }
 
   .slds-file-selector__body {
