--- a/packages/design-system/ui/components/tabs/base/_index.scss
+++ b/packages/design-system/ui/components/tabs/base/_index.scss
@@ -3,6 +3,22 @@
 
 @import 'deprecate';
 
+// Animation for `slds-is-active` state
+@keyframes shadow {
+
+  0% {
+    box-shadow: inset 0 0 $brand-light;
+  }
+
+  50% {
+    box-shadow: inset 0 rem(-30px) $brand-primary-transparent-40;
+  }
+
+  100% {
+    box-shadow: inset 0 rem(-40px) $brand-light;
+  }
+}
+
 /**
  * @summary Initializes a default tablist
  *
@@ -57,11 +73,8 @@
     bottom: 0;
     left: 0;
     right: 0;
+    height: 0;
     position: absolute;
-  }
-
-  &:after {
-    height: 2px;
   }
 
   + .slds-tabs_default__item {
@@ -78,10 +91,11 @@
   &.slds-active,
   &.slds-is-active {
     color: $color-text-action-label-active;
+    animation: shadow 300ms;
 
     &:after {
       background-color: $brand-primary;
-      height: 3px;
+      height: rem(3px);
     }
 
     .slds-tabs_default__link,
@@ -94,12 +108,10 @@
     }
   }
 
-  &:hover {
-    background: $brand-primary-transparent-10;
-
-    &:after {
-      background-color: $brand-primary-active;
-    }
+  &:hover:after {
+    height: rem(2px);
+    background-color: $brand-primary-active;
+    transition: height 300ms;
   }
 
   /**
