fix(combobox): Fix overflow button on listbox of selections in non-grouped combobox (#3419)
* fix(combobox): Fix overflow button on listbox of selections in non-grouped combobox

* fix(combobox): Point to unique ID

--- a/packages/design-system/ui/components/combobox/_doc.scss
+++ b/packages/design-system/ui/components/combobox/_doc.scss
@@ -110,7 +110,7 @@
  *
  * @base
  * @name combobox
- * @selector .slds-combobox_container
+ * @selector .slds-combobox_container, .slds-combobox-group
  * @support dev-ready
  * @category experience
  * @type user-input
