fix(panels): Prevent panel buttons from shrinking (#3426)

--- a/packages/design-system/ui/components/panels/base/_index.scss
+++ b/packages/design-system/ui/components/panels/base/_index.scss
@@ -96,6 +96,11 @@
   }
 }
 
+.slds-panel__close,
+.slds-panel__back {
+  flex-shrink: 0;
+}
+
 /**
  * @summary Adjusts styling when the title of the header is centered
  * @selector .slds-panel__header_align-center
