fix(popovers): Update box shadow on focused links for inversed style (#3428)

--- a/packages/design-system/ui/dependencies/_interactions.scss
+++ b/packages/design-system/ui/dependencies/_interactions.scss
@@ -9,6 +9,7 @@
 @mixin focus-inverse {
   outline: none;
   box-shadow: $shadow-button-focus-inverse;
+  border: $border-width-thin solid $color-border-button-focus-inverse;
 }
 
 
